--- a/index.html
+++ b/index.html
@@ -72,6 +72,29 @@
           </div>
         </div>
       </nav>
+      <!-- Banner and responsive  -->
+      <section
+        class="grid grid-cols-1 md:grid-cols-3 gap-4 banner-container bg-[#CFF0DC]"
+      >
+        <div>
+          <img src="./assets/hero-leaf1.png" alt="" />
+        </div>
+        <div class="banner-details text-center py-20 space-y-5">
+          <h2 class="text-5xl font-bold">Plant a Tree, Grow a Future</h2>
+          <p class="text-lg text-[#1F2937]">
+            Join our mission to plant 1 million trees and make the Earth greener
+            for future generations.
+          </p>
+          <button
+            class="btn text-[#15803D] bg-[#FACC15] border-none rounded-full"
+          >
+            Get Involved
+          </button>
+        </div>
+        <div>
+          <img src="./assets/hero-leaf2.png" alt="" />
+        </div>
+      </section>
     </header>
   </body>
 </html>
