--- a/index.html
+++ b/index.html
@@ -96,5 +96,44 @@
         </div>
       </section>
     </header>
+    <main class="bg-[#F0FDF4]">
+      <!-- Choose your tree section -->
+      <section class="pt-24">
+        <div class="your-tree-container w-11/12 mx-auto">
+          <h3 class="text-2xl font-bold text-center mb-5">Choose Your Trees</h3>
+
+          <div
+            class="tree-container-details grid grid-cols-1 md:grid-cols-5 gap-7"
+          >
+            <!-- catagories section and responsive -->
+            <div class="">
+              <h3 class="text-2xl font-bold text-center mb-2">Catagories</h3>
+              <button
+                class="btn btn-soft btn-success text-black text-left btn-block px-0"
+              >
+                All trees
+              </button>
+              <div
+                id="catagory-name-container"
+                class="catagories-container col-span-1"
+              ></div>
+            </div>
+
+            <!-- tree details section  and responsive-->
+            <div
+              id="tree-details"
+              class="trees-container grid grid-cols-1 md:grid-cols-3 gap-7 col-span-3"
+            >
+              <!-- cart and responsive-->
+            </div>
+
+            <!-- cart section and responsive-->
+            <div class="your-cart-container col-span-1 bg-white">
+              <h3 class="text-xl font-bold text-center">Your cart</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
