--- a/index.html
+++ b/index.html
@@ -134,6 +134,56 @@
           </div>
         </div>
       </section>
+      <!-- campaign section and responsive -->
+      <section class="campaign-container">
+        <div class="py-24">
+          <h2 class="text-2xl font-bold text-center mb-5">
+            About the Campaign
+          </h2>
+          <div
+            class="campaign-info flex flex-col items-center sm:items-start md:flex-row gap-2 w-8/12 mx-auto"
+          >
+            <div class="w-1/2 w-full">
+              <img class=" " src="./assets/about.png" alt="" />
+            </div>
+            <div
+              class="text-lg text-[#1F2937] space-y-5 w-1/2 w-full py-30 px-2"
+            >
+              <p>
+                Green Earth is a global tree plantation initiative dedicated to
+                fighting climate change. Since our start, we’ve planted over
+                500,000 trees worldwide. By joining our campaign, you help
+                restore forests, create habitats for wildlife, and combat global
+                warming.
+              </p>
+              <ul class="list-disc pl-6">
+                <li>Restoration of natural habitats</li>
+                <li>Improvement of air quality</li>
+                <li>Support for local communities</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Impact section and responsive -->
+      <section class="imapact-conatainer bg-[#CFF0DC]">
+        <div class="p-15">
+          <h2 class="text-2xl font-bold text-center mb-5">Our Impact</h2>
+          <div class="impact-cart grid grid-cols-1 md:grid-cols-3 gap-10">
+            <div class="bg-white text-center p-10 rounded-md space-y-2">
+              <h2 class="text-3xl font-semibold text-[#15803D]">500K+</h2>
+              <p class="text-[#1F2937]">Trees Planted</p>
+            </div>
+            <div class="bg-white text-center p-10 rounded-md space-y-2">
+              <h2 class="text-3xl font-semibold text-[#15803D]">120+</h2>
+            </div>
+            <div class="bg-white text-center p-10 rounded-md space-y-2">
+              <h2 class="text-3xl font-semibold text-[#15803D]">30+</h2>
+              <p class="text-[#1F2937]">Countries Reached</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
