--- a/index.html
+++ b/index.html
@@ -106,18 +106,11 @@
             class="tree-container-details grid grid-cols-1 md:grid-cols-5 gap-7"
           >
             <!-- catagories section and responsive -->
-            <div class="">
-              <h3 class="text-2xl font-bold text-center mb-2">Catagories</h3>
-              <button
-                class="btn btn-soft btn-success text-black text-left btn-block px-0"
-              >
-                All trees
-              </button>
-              <div
-                id="catagory-name-container"
-                class="catagories-container col-span-1"
-              ></div>
-            </div>
+              <div class="">
+                        <h3 class="text-2xl font-bold text-center mb-2"> Catagories</h3>
+                        <button onclick="allPlants()" class="btn btn-soft btn-success text-black text-left btn-block px-0 ">All trees</button>
+                        <div id="catagory-name-container" class="catagories-container  col-span-1 ">  </div>
+                     </div>
 
             <!-- tree details section  and responsive-->
             <div
